--- a/caughtexceptionlib/build.gradle
+++ b/caughtexceptionlib/build.gradle
@@ -1,5 +1,31 @@
 apply plugin: 'com.android.library'
 
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'caught-exception'   // Has to be same as your library module name
+
+    publishedGroupId = 'com.lemon.library'
+    libraryName = 'LCaughtException'
+    artifact = 'caught-exception'     // Has to be same as your library module name
+
+    libraryDescription = 'Android lib for debug mode or staging caught when app get error exception , it will print error log to a new page.'
+
+    // Your github repo link
+    siteUrl = 'https://github.com/LemonNicholas/LCaughtException'
+    gitUrl = 'https://github.com/LemonNicholas/LCaughtException.git'
+    githubRepository= 'LemonNicholas/LCaughtException.git'
+
+    libraryVersion = '1.0.0'
+
+    developerId = 'lnicholaslemonl'
+    developerName = 'Nicholas'
+    developerEmail = 'lnicholaslemonl@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.1"
@@ -22,10 +48,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
     compile 'com.android.support:appcompat-v7:25.1.0'
-    testCompile 'junit:junit:4.12'
 }
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
