--- a/caughtexceptionlib/build.gradle
+++ b/caughtexceptionlib/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.library'
 
 ext {
     bintrayRepo = 'maven'
-    bintrayName = 'caught-exception'   // Has to be same as your library module name
+    bintrayName = 'caughtexceptionlib'   // Has to be same as your library module name
 
     publishedGroupId = 'com.lemon.library'
     libraryName = 'LCaughtException'
-    artifact = 'caught-exception'     // Has to be same as your library module name
+    artifact = 'caughtexceptionlib'     // Has to be same as your library module name
 
     libraryDescription = 'Android lib for debug mode or staging caught when app get error exception , it will print error log to a new page.'
 
@@ -15,7 +15,7 @@ ext {
     gitUrl = 'https://github.com/LemonNicholas/LCaughtException.git'
     githubRepository= 'LemonNicholas/LCaughtException.git'
 
-    libraryVersion = '1.0.0'
+    libraryVersion = '1.0.1'
 
     developerId = 'lnicholaslemonl'
     developerName = 'Nicholas'
@@ -33,8 +33,8 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode 2017031601
+        versionName "1.0.1"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
